pkg/config/analysis/analyzers/testdata/gateway-no-port.yaml
# Gateway with bogus port
#
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 8004
        name: http2
        protocol: HTTP
      hosts:
        - "*"
